--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ body{
 
 #cabecalho{
   background-color:rgb(224, 194, 110)
-  position: relative;
+  position: absolute;
   width: 100%;
   height: auto;
-  top: 50px;
-  left: 50px;
 }
