--- a/style.css
+++ b/style.css
@@ -4,5 +4,8 @@ body{
 
 #cabecalho{
   background-color:rgb(224, 194, 110)
-  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vh;
 }
