--- a/style.css
+++ b/style.css
@@ -2,11 +2,8 @@ body{
   background:rgb(23, 22, 20)
 }
 
-#cabecalho{
+footer{
   background-color:rgb(224, 194, 110)
-  position: absolute;
-  top: 0px;
-  left: 0px;
   width: 100vh;
   height: auto;
 }
