Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 footer{
-  background-color:rgb(224, 194, 110)
+  background-color:rgb(224, 194, 110);
   width: 100vh;
   height: auto;
 }
