--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@ header{
   width: 40%;
   height: 100%;
 }
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 30%;
+  height: 100%
+}
