--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header{
   align-items: center;
   width: 40%;
   height: 100%;
+  background-color:red;
 }
 nav{
   display: flex;
@@ -22,4 +23,5 @@ nav{
   align-items: center;
   width: 30%;
   height: 100%;
+  background-color:blue;
 }
