--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
 }
 #logo_nome{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 40%;
   height: 100%;
