Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header{
   align-items: center;
   width: 40%;
   height: 100%;
-  outline: solid 2px red;
+  outline: solid 2px blue;
 }
 #logo{
   max-heith: 100%;
