--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ header{
   left: 10px;
   display: flex;
   align-items: center;
-  width: 35%;
+  width: 40%;
   height: 100%;
   outline: solid 2px blue;
 }
 #logo{
-  max-width: 100%;
+  max-height: 100%;
 }
 
 nav{
