--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
   position: relative;
   left: 10px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 40%;
   height: 100%;
