--- a/style.css
+++ b/style.css
@@ -16,15 +16,16 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 40%;
+  width: 30%;
   height: 100%;
   outline: solid 2px blue;
 }
 #logo{
-  max-height: 100%;
+  max-height: 90%;
 }
 #ass{
   max-height: 100%;
+  max-width: 100%;
 }
 
 nav{
