--- a/style.css
+++ b/style.css
@@ -21,12 +21,11 @@ header{
   outline: solid 2px blue;
 }
 #logo{
-  max-height: 90%;
+  height: 85%;;
 }
 #ass{
   width: 90%;
   max-height: 100%;
-  max-width: 90%;
 }
 
 nav{
