--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100vh;
   height: 80px;
   background-color:rgb(224, 194, 110);
 }
