--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
   background:rgb(23, 22, 20);
 }
 
+
 header{
   display: flex;
   justify-content: space-between;
@@ -36,3 +37,23 @@ nav{
   width: 40%;
   height: 85%;
 }
+
+
+/* MOBILE */
+    @media only screen and (max-width: 479px){
+    }
+
+
+/* MOBILE Landscape */ 
+    @media only screen and (min-width: 480px) and (max-width: 767px){	
+    }
+
+
+/* TABLET */
+    @media only screen and (min-width: 768px) and (max-width: 833px) {
+    }
+
+
+/* TABLET Landscape */ 
+    @media only screen and (min-width: 834px) and (max-width: 1024px) {
+    }
