--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav{
 /* MOBILE */
 @media only screen and (max-width: 479px){
   #logo_div{width:74.5px;}
-  #logo{display:none}
+  #logo_nome{display:none}
 }
 
 
