--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header{
   align-items: center;
   width: 350px;
   height: 70px;
-  outline-color: solid 2px blue;
+  outline-color: solid 3px blue;
 }
 #logo{
   height: 100%;
@@ -41,7 +41,7 @@ nav{
 /* MOBILE */
 @media only screen and (max-width: 479px){
   #logo_div{width:74.5px;}
-  #logo_text{display:none}
+  #logo_text{display:none;}
 }
 
 
