--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ nav{
 
 /* MOBILE */
 @media only screen and (max-width: 479px){
+  header{width: 100vh;}
   #logo_div{width: 74.5px;}
   #logo_text{display: none;}
 }
