--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vh;
+  width: 100%;
   height: 80px;
   background-color:rgb(224, 194, 110);
 }
