--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   height: 80px;
   background-color:rgb(224, 194, 110);
 }
@@ -38,8 +37,9 @@ nav{
 
 /* MOBILE */
 @media only screen and (max-width: 479px){
+  header{width: 100%;}
   #logo_div{width: 74.5px;}
-  #logo_text{display: none;}
+  #text_logo{display: none;}
 }
 
 
