--- a/style.css
+++ b/style.css
@@ -4,12 +4,10 @@ body{
 
 
 header{
-  position: absolute;
-  left: 0px;
-  up: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100vh;
   height: 80px;
   background-color:rgb(224, 194, 110);
 }
