--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header{
   position: relative;
   left: 10px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 350px;
   height: 70px;
