--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
 }
 
 
+
+/* HEADER /*
 header{
   display: flex;
   justify-content: space-between;
@@ -39,6 +41,7 @@ nav{
 }
 
 
+/* RESPONSIVE WEB /*
 /* MOBILE */
 @media only screen and (max-width: 479px){
   #logo_div{width: 74.5px;}
