--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 
 
 
-/* HEADER /*
+/* HEADER */
 header{
   display: flex;
   justify-content: space-between;
@@ -41,7 +41,7 @@ nav{
 }
 
 
-/* RESPONSIVE WEB /*
+/* RESPONSIVE WEB */
 /* MOBILE */
 @media only screen and (max-width: 479px){
   #logo_div{width: 74.5px;}
