--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 /* HEADER */
 header{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 80px;
   background-color:rgb(224, 194, 110);
