--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 /* HEADER */
 header{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: 80px;
   background-color:rgb(224, 194, 110);
@@ -17,7 +17,7 @@ header{
   position: relative;
   left: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: spacebetween;
   align-items: center;
   width: 350px;
   height: 70px;
@@ -26,6 +26,11 @@ header{
 .logo{
   height: 100%;
   outline: solid 2px red;
+}
+#bttn_logo{
+  width: 100%;
+  height: 100%;
+  opacity: 0%;
 }
 
 nav{
