--- a/style.css
+++ b/style.css
@@ -28,9 +28,12 @@ header{
   outline: solid 2px red;
 }
 #bttn_logo{
+  position: absolute;
+  left: 0px;
   width: 100%;
   height: 100%;
-  opacity: 0%;
+  opacity: 50%;
+  outline: solid 2px green;
 }
 
 nav{
