--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ nav{
 @media only screen and (max-width: 479px){
   #logo_div{width: 74.5px;}
   #text_logo{display: none;}
+  #nav_bttn{display: block;}
 }
 
 
