--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header{
   opacity: 0%;
 }
 
+/* NAV */
 nav{
   position: relative;
   right: 10px;
@@ -43,6 +44,10 @@ nav{
   width: 40%;
   height: 70px;
 }
+
+/* //////////////////// */
+
+
 
 
 /* RESPONSIVE WEB */
