--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
   background-color:rgb(224, 194, 110);
 }
 
-header a {
+header a{
   position: relative;
   left: 10px;
 }
@@ -47,7 +47,7 @@ main{
   width: 51%;
   height: auto;
   color: white;
-  outline-color: solid 2px red;
+  outline-color: red;
 }
 
 
