--- a/style.css
+++ b/style.css
@@ -46,8 +46,22 @@ main{
   left: 40px;
   width: 51%;
   height: auto;
+  outline-color: solid 2px red;
+}
+
+#oque_e{
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 620px;
   color: white;
-  outline-color: red;
+  outline-color: solid 2px red;
+}
+#oque_e #img1{
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 22%;
 }
 
 
