--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main{
   left: 40px;
   width: 51%;
   height: auto;
-  outline-color: solid 2px red;
+  outline-color: 2px solid blue;
 }
 
 #oque_e{
@@ -55,7 +55,7 @@ main{
   width: 100%;
   height: 620px;
   color: white;
-  outline-color: solid 2px red;
+  outline-color: 2px solid blue;
 }
 #oque_e #img1{
   position: absolute;
