--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
 /* HEADER */
 header{
   position: absolute;
+  top: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
