--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body{
   background:rgb(23, 22, 20);
-  display: flex;
-  width: 100vw;
-  height: auto;
 }
 
 
@@ -10,9 +7,11 @@ body{
 header{
   position: absolute;
   top: 0px;
+  left: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100vw;
   height: 60px;
   background-color:rgb(224, 194, 110);
 }
