--- a/style.css
+++ b/style.css
@@ -65,6 +65,19 @@ main{
   top: 0px;
   width: 22%;
 }
+#oque_e h1{
+  position: absolute;
+  width: 74%;
+}
+#oque_e #p1{
+  position: absolute;
+  top: 20px;
+  width: 74%;
+}
+#oque_e #p2{
+  position: absolute;
+  top: 100px;
+}
 
 
 /* TABLET */
