--- a/base.css
+++ b/base.css
@@ -1,3 +1,13 @@
 h1, h2, h3, h4, h5, h6, p{
   margin: 0px;
 }
+
+:root{
+  --primary: rgb(224, 194, 110);
+  --primary_d1: rgb();
+  --primary_d2: rgb();
+  --secondary: rgb();
+  --secondary_d1: rgb();
+  --bg: rgb();
+  --bg_d1: rgb();
+}
