--- a/base.css
+++ b/base.css
@@ -3,8 +3,8 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 :root{
-  --primary: rgb(224, 194, 110);
-  --primary_d1: rgb();
+  --primary: rgb(224, 194, 110); /* #E0C26E */
+  --primary_d1: rgb(147, 133, 94); /* #93855E */
   --primary_d2: rgb();
   --secondary: rgb();
   --secondary_d1: rgb();
