--- a/base.css
+++ b/base.css
@@ -6,8 +6,8 @@ h1, h2, h3, h4, h5, h6, p{
   --primary: rgb(224, 194, 110); /* #E0C26E */
   --primary_d1: rgb(147, 133, 94); /* #93855E */
   --primary_d2: rgb(83, 76, 40); /* #534C28 */
-  /*--secondary: rgb(); # */
-  /*--secondary_d1: rgb(); # */
+  --secondary: rgb(140, 41, 36); /* #8C2924 */
+  --secondary_d1: rgb(96, 36, 33); /* #602421 */
   --bg: rgb(23, 22, 20); /* #171614 */
   --bg_d1: rgb(16, 15, 13); /* #100f0d */
 }
