--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav{
 main{
   position: absolute;
   top: 100px;
-  align-self: center;
+  left: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
