--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ aside{
   right: 0px;
   width: 40vw;
   height: 100vh;
-  background-color: var(--primary_d1)
+  background-color: var(--primary_d1);
 }
 
 /* TABLET */
