--- a/base.css
+++ b/base.css
@@ -1,8 +1,4 @@
-h1, h2, h3, h4, h5, h6, main p{
-  color: #ffffff;
-  margin: 0px;
-}
-
+/* Color Vars */
 :root{
   --primary: rgb(224, 194, 110); /* #E0C26E */
   --primary_d1: rgb(147, 133, 94); /* #93855E */
@@ -11,6 +7,12 @@ h1, h2, h3, h4, h5, h6, main p{
   --secondary_d1: rgb(96, 36, 33); /* #602421 */
   --bg: rgb(23, 22, 20); /* #171614 */
   --bg_d1: rgb(16, 15, 13); /* #100f0d */
+}
+
+/* Text Configs */
+h1, h2, h3, h4, h5, h6, main p{
+  color: #ffffff;
+  margin: 0px;
 }
 
 strong{
