Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -1,6 +1,9 @@
 /* RESPONSIVE WEB */
 /* MOBILE */
 @media only screen and (max-width: 479px){
+  /* Base */
+
+
   /* HEADER */
   #logo_div{width: 48px;}
   #text_logo{display: none;}
