Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ main{
   text-align: justify;
   width: 76%;
 }
+#oque_e #p3{
+  text-align: justify;
+  width: 76%;
+}
 
 /* ////////////////////////////// */
 
