--- a/style.css
+++ b/style.css
@@ -84,14 +84,20 @@ main{
   width: 76%;
 }
 #oque_e #p1{
+  position: absolute;
+  left: 0px;
   text-align: justify;
   width: 76%;
 }
 #oque_e #p2{
+  position: absolute;
+  left: 0px;
   text-align: justify;
   width: 76%;
 }
 #oque_e #p3{
+  position: absolute;
+  right: 0px;
   text-align: justify;
   width: 76%;
 }
