--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ main{
   top: 0px;
   left: 0px;
   text-align: center;
-  font-size: 18px;
-  word-spacing: 5px;
+  font-size: 3em;
+  word-spacing: 7px;
   width: 76%;
 }
 #oque_e #p1{
