--- a/style.css
+++ b/style.css
@@ -86,18 +86,21 @@ main{
 }
 #oque_e #p1{
   position: absolute;
+  top: 30px;
   left: 0px;
   text-align: justify;
   width: 76%;
 }
 #oque_e #p2{
   position: absolute;
+  top: 140px;
   left: 0px;
   text-align: justify;
   width: 76%;
 }
 #oque_e #p3{
   position: absolute;
+  top: 200px;
   right: 0px;
   text-align: justify;
   width: 76%;
