--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
+  width: 100vw;
   margin: 0px;
   background: var(--bg);
 }
@@ -14,7 +11,6 @@ header{
   top: 0px;
   left: 0px;
   display: flex;
-  order: 1;
   justify-content: space-between;
   align-items: center;
   width: 100vw;
@@ -24,8 +20,7 @@ header{
 }
 
 header a{
-  position: relative;
-  left: 10px;
+  margin-left: 10px;
 }
 #logo_div{
   display: flex;
@@ -36,34 +31,31 @@ header a{
 }
 .logo{
   height: 100%;
+  margin-left: 10px;
 }
 
 /* NAV */
 nav{
-  position: relative;
-  right: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 40%;
   height: 45px;
+  margin-right: 10px;
 }
 
 /* ////////////////////////////// */
 
 /* Main */
 main{
-  position: absolute;
-  top: 100px;
   display: flex;
-  order: 2;
   flex-direction: column;
-  align-items: center;
-  width: 60vw;
+  width: 100vw;
   background-color: var(--bg_d1);
 }
 
 #oque_e{
+  display: flex
   width: 90%;
   height: 562px;
   border-bottom: solid var(--primary) 2px;
@@ -114,7 +106,7 @@ aside{
   position: fixed;
   top: 60px;
   right: 0px;
-  width: 40vw;
+  width: 30vw;
   height: 100vh;
   background-color: var(--primary_d1);
 }
