--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main{
   display: flex
   width: 90%;
   height: 562px;
-  border-bottom: solid var(--primary) 2px;
+  margin-top: 60px;
 }
 #oque_e #img1{
   position: absolute;
@@ -68,18 +68,12 @@ main{
 }
 #oque_e h1{
   font-family: "Courier New", Courier, monospace;
-  position: absolute;
-  top: 0px;
-  left: 0px;
   text-align: center;
   font-size: 2em;
   word-spacing: 7px;
   width: 76%;
 }
 #oque_e #p1{
-  position: absolute;
-  top: 30px;
-  left: 0px;
   text-align: justify;
   width: 76%;
 }
