--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box !important;
+  text-decoration: none !important;
+  list-style: none !important;
+
+
 body{
   width: 100vw;
   margin: 0px;
@@ -79,7 +89,7 @@ main #conteudo section{
 #oque_e h1{
   font-family: "Courier New", Courier, monospace;
   text-align: center;
-  font-size: 2vw;
+  font-size: 2em;
   letter-spacing: 7px;
   width: 75%;
   margin-bottom: 25px;
