Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ main{
   display: flex;
   width: 100vw;
   margin-top: 60px;
+  overflow-x: hidden;
 }
 
 
@@ -61,11 +62,10 @@ main #conteudo{
   flex-direction: column;
   justify-content: center;
   width: 70vw;
-  padding: 0 5vw;
 }
 main #conteudo section{
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   width: 80%;
   border-bottom: solid 2px var(--primary);
   margin-bottom: 50px;
