--- a/style.css
+++ b/style.css
@@ -66,7 +66,9 @@ main #conteudo{
   outline: solid 2px red
 }
 main #conteudo section{
+  position: relative;
   display: flex;
+  flex-wrap: wrap;
   width: 80%;
   border-bottom: solid 2px var(--primary);
   margin-bottom: 50px;
@@ -76,6 +78,9 @@ main #conteudo section{
 
 
 #oque_e #img1{
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 20%;
 }
 #oque_e h1{
@@ -83,7 +88,7 @@ main #conteudo section{
   text-align: center;
   font-size: 2em;
   letter-spacing: 7px;
-  width: 75%;
+  max-width: 75%;
   margin-bottom: 25px;
 }
 #oque_e #p1{
