Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main{
 main #conteudo{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-content: center;
   width: 70vw;
   margin-top: 60px;
   outline: solid 2px red
