--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ main #conteudo section h3{
 #conteudo #oque_e #cruz{
   position: absolute;
   top: 0;
-  right: calc(0+3%);
+  right: 3%;
   width: 20%;
 }
 #conteudo #oque_e h3{
