Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -8,6 +8,18 @@
   #logo_div{width: 48px;}
   #text_logo{display: none;}
 
+
+  /* ////////////////////////////// */
+
+
+  /*Conteudo*/
+
+  align-items: center;
+
+
+  /* ////////////////////////////// */
+
+
   /* ASIDE */
   aside{display: none;}
 }
