Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -19,6 +19,14 @@
   }
 
 
+  #counteudo #oque_e #cruz{
+    
+  }
+  #counteudo #oque_e #h3{
+    width: 100%;
+  }
+
+
   /* ////////////////////////////// */
 
 
