Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ main #conteudo section{
   border-bottom: solid 2px var(--primary);
   margin-bottom: 50px;
   background-color: var(--bg_d1);
+  border-radius: 10px 10px 0 0;
   padding: 3%;
 }
 main #conteudo section h3{
