Atualizar o style.css

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ main #conteudo section h3{
 
 #conteudo #oque_e #cruz{
   position: absolute;
-  top: 0;
+  top: 3%;
   right: 3%;
   width: 20%;
 }
