Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -29,6 +29,9 @@
   #conteudo #oque_e #p1{
     width: 50%
   }
+  #conteudo #oque_e #p2{
+    width: 100%
+  }
 
 
   /* ////////////////////////////// */
