Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -23,7 +23,7 @@
     top: 57px;
     width: 35%;
   }
-  #conteudo #oque_e #h3{
+  #conteudo #oque_e h3{
     width: 100%;
   }
   #conteudo #oque_e #p1{
