Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -17,6 +17,12 @@
   main #conteudo{
     width: 100vw;
   }
+  main #conteudo section h3{
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  font-size: 1.8em;
+  letter-spacing: 4px;
+}
   
   
   #conteudo #oque_e #cruz{
