Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -29,15 +29,11 @@
     top: 57px;
     width: 35%;
   }
-  #conteudo #oque_e h3{
-    width: 100%;
-  }
   #conteudo #oque_e #p1{
     width: 55%;
   }
-  #conteudo #oque_e #p2{
-    width: 100%;
-  }
+  #conteudo #oque_e h3,
+  #conteudo #oque_e #p2,
   #conteudo #oque_e #p3{
     width: 100%;
   }
