--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -22,9 +22,16 @@
   text-align: center;
   font-size: 1.5em;
   letter-spacing: 4px;
-}
+  }
+  main #conteudo section p{
+    text-align: justify;
+    font-size: 1em;
+    color: #fff;
+    margin-bottom: 16px;
+  }
   
   
+  /* Oque é A Sombra Sã*/
   #conteudo #oque_e #cruz{
     top: 57px;
     width: 35%;
