--- a/style.css
+++ b/style.css
@@ -73,6 +73,13 @@ nav{
   height: 45px;
   margin-right: 10px;
 }
+navbttn{
+  width: 40px;
+  height: 40px;
+  background: initial;
+  border: solid 2px var(--primary_d1);
+  border-radius: 10px;
+}
 
 
 /* ////////////////////////////// */
