--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -7,7 +7,7 @@
   /* HEADER */
   #logo_div{width: 48px;}
   #text_logo{display: none;}
-  #navbttn{display: block;}
+  #navbttn{display: flex;}
 
 
   /* ////////////////////////////// */
