--- a/style.css
+++ b/style.css
@@ -79,11 +79,12 @@ nav{
   margin-right: 10px;
 }
 #navbttn{
+  background: initial;
   width: 40px;
   height: 40px;
-  background: initial;
   border: solid 2px var(--primary_d1);
   border-radius: 10px;
+  margin-right: 10px;
 }
 
 
