--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header button{
 }
 header button ::before,
 header button ::after{
-  display: block;
+  content: "";
   width: 80%;
   height: 15px;
   border-top: solid 2px var(--primary_d2);
