Atualizar o responsive_mobile.css

--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -13,7 +13,7 @@
   
   
   /* HEADER */
-  header #logo_div, header a{width: 48px;}
+  header a #logo_div{width: 48px;}
 
 
   /* ////////////////////////////// */
