--- a/style.css
+++ b/style.css
@@ -148,10 +148,9 @@ main #conteudo section p{
 
 /*O que é A Sombra Sã*/
 #conteudo #oque_e #cruz{
-  position: absolute;
-  top: 3%;
-  right: 3%;
   width: 20%;
+  margin-left: auto;
+  margin-bottom: auto;
 }
 #conteudo #oque_e h3,
 #conteudo #oque_e p{
