--- a/style.css
+++ b/style.css
@@ -151,13 +151,12 @@ main #conteudo section p{
   width: 20%;
   margin-left: auto;
   margin-bottom: auto;
-}
-#conteudo #oque_e h3,
+},
 #conteudo #oque_e p{
   width: 70%;
 }
 #conteudo #oque_e #p3{
-  justify-self: flex-end;
+  margin-left: auto;
 }
 
 
