--- a/style.css
+++ b/style.css
@@ -153,13 +153,13 @@ main #conteudo section p{
   margin-bottom: auto;
   order: 2;
 }
-#conteudo #oque_e h3,
+#conteudo #oque_e h3{
+  width: 70%;
+  order: 1;
+}
 #conteudo #oque_e p{
   width: 70%;
   order: 3;
-}
-#conteudo #oque_e h3{
-  order: 1;
 }
 #conteudo #oque_e #p3{
   margin-left: auto;
