--- a/style.css
+++ b/style.css
@@ -148,18 +148,16 @@ main #conteudo section p{
 
 /*O que é A Sombra Sã*/
 #conteudo #oque_e #cruz{
+  position: absolute;
+  top: 3%;
+  right: 3%;
   width: 20%;
   margin-left: auto;
   margin-bottom: auto;
-  order: 2;
 }
-#conteudo #oque_e h3{
-  width: 70%;
-  order: 1;
-}
+#conteudo #oque_e h3,
 #conteudo #oque_e p{
   width: 70%;
-  order: 3;
 }
 #conteudo #oque_e #p3{
   margin-left: auto;
