--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ header button::after{
   border-bottom: solid 1px var(--primary_d2);
 }
 header button::after{
-  border-top: 1px;
-  border-bottom: 2px;
+  border-top: solid 1px var(--primary_d2);
+  border-bottom: solid 2px var (--primary_d2);
 }
 
 
