--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ header nav{
 }
 header button{
   display: flex;
-  align-content: center;
+  justify-items: center;
   align-items: center;
   background: initial;
   width: 45px;
