--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -20,6 +20,7 @@
     position: relative;
     justify-items: center;
     align-items: center;
+    align-content: center;
     background: none;
     width: 45px;
     height: 45px;
@@ -37,6 +38,7 @@
     border-bottom: solid 3px var(--primary_d2);
   }
   header button::after{
+    border-top: none;
     border-bottom: solid 3px var(--primary_d2);
   }
 
