--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -18,6 +18,7 @@
   header button{
     display: flex;
     position: relative;
+    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     background: none;
@@ -30,6 +31,7 @@
   header button::before,
   header button::after{
     content: "";
+    display: block;
     position: relative;
     width: 80%;
     height: 12px;
