--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -32,6 +32,7 @@
   header button::after{
     content: "";
     display: block;
+    position: relative;
     width: 80%;
     height: 12px;
     border-top: solid 3px var(--primary_d2);
