--- a/style.css
+++ b/style.css
@@ -157,6 +157,6 @@ aside{
   width: 30vw;
   height: 100vh;
   background-color: var(--primary_d1);
-  transition: right 0.5 ease-out;
+  transition: right 0.5s ease-out;
   z-index: 6;
 }
