--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -24,6 +24,9 @@
     border-radius: 10px;
     margin-right: 10px;
   }
+  header button img{
+    width: 100%;
+  }
   
 
   /* ////////////////////////////// */
