--- a/style.css
+++ b/style.css
@@ -165,6 +165,6 @@ aside #exit{
   width: 30px;
   height: 30px;
   background-color: none;
-  border: solid 3px var(--bg_d1)
+  border: solid 3px var(--bg_d1);
   margin-left: 10px;
 }
