--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -84,6 +84,13 @@
   right: -100vw;
   width: 100vw;
   }
+  aside #exit{
+    width: 30px;
+    height: 30px;
+    background-color: none;
+    border: solid 3px var(--bg_d1);
+    margin-left: 10px;
+  }
 }
 
 
