--- a/responsive_mobile.css
+++ b/responsive_mobile.css
@@ -23,6 +23,7 @@
     height: 45px;
     border: solid 2px var(--primary_d1);
     border-radius: 10px;
+    z-index: 10;
   }
   aside button img{
     width: 100%;
